--- a/src/Pages/About/About.css
+++ b/src/Pages/About/About.css
@@ -6,32 +6,13 @@ hr{
 }
 
  
-#menu {
-    height: 200px;
-   
-    border-left: 2px solid #ccc;
-    padding: 0 10px 0 10px;
+span{
+    color:#f5f5f5
 }
-.mine{
-    font-size: 16px;
-    border: 2pxsolid #ccc;
-    line-height: 2.5;
-    position: relative;
-    height: 110px;
+.text-center{
+    padding: 20px;
+    margin-top: 10px;
+    color:#b0bec5;
 }
-.mine::before{
-    content: '';
-    display: block;
-    width:10px;
-    height: 10px;
-    border-radius: 50%;
-    background-color: #000;
-    border: 3px solid #ddd;
-    position: absolute;
-    top: 10px;
-    left: -15px;
-
-}
-
 
 
